--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "My site",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "animate.css": "^4.1.0"
+  },
   "devDependencies": {
     "node-sass": "^4.9.0"
   },
